# synthetic-GAN

./: .gitignore  Dockerfile  LICENSE  README.md  config.py  data_preprocessor.py  docker-compose.yml  install.sh  main.py  optimize_submission.py  privacy_ctgan.py  pyproject.toml  requirements.txt  run_test.py  setup.py
config/: config.py
src/: __init__.py
src/scripts/: main.py  optimize_submission.py
src/synthetic_gan/: __init__.py
src/synthetic_gan/data/: __init__.py
src/synthetic_gan/evaluation/: __init__.py  validate_optimization.py
src/synthetic_gan/models/: __init__.py
tests/: run_test.py
